# dharma

./: .gitignore  README.md  ddd.pu  index.html  package.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  template.env
db/create/: create_d_gender.sql  create_d_player.sql  create_d_role.sql  create_d_scenario.sql  create_d_team.sql  create_d_tournament.sql  create_f_game_result.sql  create_f_game_unit.sql  create_f_raid.sql  create_f_result.sql
db/sql/: create_d_role.sql  (+6 more)
design/: model_ddd.pu  moniter.pu  usecase_ddd.pu
src/: App.tsx  Dharma.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: common.rs  controller.rs  dependency_injection.rs  domain.rs  infra.rs  main.rs  model.rs  models.rs  service.rs  services.rs  usecases.rs
src-tauri/src/common/: dharma_error.rs
src-tauri/src/domain/: kabaddi.rs  model.rs  player.rs  team.rs
src-tauri/src/domain/kabaddi/: game_time.rs  kabaddi_entity.rs  round.rs
src-tauri/src/domain/model/: error.rs  game.rs  team.rs
src-tauri/src/domain/model/game/: game_entity.rs
src-tauri/src/domain/model/team/: team_entity.rs  team_player.rs  team_repository.rs  team_score.rs
src-tauri/src/domain/player/: player_entity.rs  player_height.rs  player_id.rs  player_name.rs  player_role.rs
src-tauri/src/domain/team/: team_entity.rs  team_id.rs  team_repository.rs
src-tauri/src/infra/: command.rs  pre_game_repository.rs  query.rs  result_repositry_impl.rs
src-tauri/src/infra/command/: player_repository.rs
src-tauri/src/infra/query/: player_query.rs
src-tauri/src/model/: error.rs  match.rs  team.rs
src-tauri/src/model/game/: game_entity.rs  game_id.rs
src-tauri/src/model/match/: match_entity.rs
src-tauri/src/model/team/: team_entity.rs  team_id.rs  team_player.rs  team_player_id.rs
src-tauri/src/models/: Cargo.toml  common.rs  player.rs  pre_game.rs  result.rs  team.rs
src-tauri/src/models/common/: value_objects.rs
src-tauri/src/models/common/value_objects/: game_id.rs  player_height.rs  player_id.rs  player_name.rs  player_number.rs  player_weight.rs  raid_scenario.rs  score.rs  team_name.rs
src-tauri/src/models/kabaddi/: kabaddi_entity.rs
src-tauri/src/models/player/: player_entity.rs  player_id.rs  player_name.rs  player_number.rs  player_repository.rs  player_repository_trait.rs  player_role.rs  player_service.rs  player_status.rs  player_weight.rs
src-tauri/src/models/pre_game/: pre_game_entity.rs  pre_game_repository_trait.rs
src-tauri/src/models/result/: result_entity.rs  result_repository_trait.rs
src-tauri/src/models/team/: team_entity.rs  team_repository.rs  team_score.rs
src-tauri/src/service/: log_raid_usecase.rs
src-tauri/src/services/: dto.rs  interactor.rs  lib.rs  payload.rs  query.rs  usecase.rs  usecases.rs
src-tauri/src/services/dto/: kabaddi_dto.rs  player_dto.rs  team_dto.rs
src-tauri/src/services/interactor/: register_player_interactor.rs
src-tauri/src/services/payload/: pre_game_payload.rs  result_payload.rs
src-tauri/src/services/query/: player_query_trait.rs
src-tauri/src/services/usecase/: player_usecase.rs
src-tauri/src/services/usecases/: fetch_results.rs  logger_usecase.rs  raid_out_usecase.rs  register_pre_game_usecase.rs  register_pregame.rs
src-tauri/src/sql/: insert.rs
(+10 files in other folders)
