[package]
name = "dharma"
version = "0.0.0"
description = "The system is designed to record kabaddi gamees. Provides UI for real-time distribution."
authors = ["Yu Tokunaga<ludoludo@outlook.jp>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["shell-open"] }
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0.69"
async-trait = "0.1.64"
rusqlite = {version= "*", features=["bundled"]}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]