[package]
name = "dharma"
version = "0.0.0"
description = "The system is designed to record kabaddi gamees. Provides UI for real-time distribution."
authors = ["Yu Tokunaga<ludoludo@outlook.jp>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tauri = { version = "1.2.4", features = ["api-all"] }
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0.69"
async-trait = "0.1.64"
rusqlite = {version= "*", features= ["bundled"] }
regex = "1.7.1"
thiserror = "1.0.38"
ulid = "1"
chrono = { version = "^0.4", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
